# kreep

./: AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml  perf.yml  security.yml
benches/: benchmarks.rs
docs/triage/: BACKLOG.md  TRIAGE_REPORT.md
examples/: extension_fields.rs  f17.rs  factorization.rs  field_basics.rs  irreducible_polys.rs  ntt_mul.rs  playground.rs  poly_arithmetic.rs
scripts/: triage_create_issues.sh  triage_create_labels.sh
src/: lib.rs  utils.rs
src/algebra/: field.rs  group.rs  mod.rs  ring.rs
src/structures/: ext.rs  fp.rs  gf.rs  mod.rs  ntt.rs  poly.rs
tests/: field_properties.rs  serde_tests.rs
