[package]
name = "kreep"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]
rand = ["dep:rand"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"
rand = "0.8"
