[package]
name = "kreep"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
serde = ["dep:serde"]
rand = ["dep:rand"]
subtle = ["dep:subtle"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }
subtle = { version = "2.5", optional = true }

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"
rand = "0.8"
subtle = "2.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
